--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-Author: David V. Hill, SGT
-       
-License: NASA Open Source Agreement 1.3
-USGS Designation: EROS Science Processing Architecture (ESPA) Bulk Downloader
-
+#Installation
+* Install python 2.7.
+* Clone this repository: `git clone https://github.com/USGS-EROS/espa-bulk-downloader.git bulk-downloader`
+* `cd bulk-downloader`
+* `./
 ESPA Bulk Download Client Version 1.0.0. [Tested with Python 2.7]
 
 Retrieves all completed scenes for the user/order
